--- a/index.html
+++ b/index.html
@@ -16,40 +16,45 @@
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!--<link rel="stylesheet" href="./css/styles.css" />-->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body class="body">
     <header class="header">
-      <div class="container header-container">
+      <div class="container navigation__container">
         <!-- menu -->
-        <nav class="header-nav">
+        <nav class="navigation">
           <a href="./index.html" lang="en" class="color-logo logo link"
-            >Web<span class="header-logo logo">Studio</span></a
+            >Web<span class="header__logo logo">Studio</span></a
           >
-          <ul class="header-list list">
-            <li class="header-item">
-              <a href="index.html" class="header-link-studia link">Студія</a>
+          <ul class="navigation__list list">
+            <li class="navigation__item">
+              <a href="index.html" class="navigation__link-studia link"
+                >Студія</a
+              >
             </li>
-            <li class="header-item">
-              <a href="portfolio.html" class="header-link link">Портфоліо</a>
+            <li class="navigation__item">
+              <a href="portfolio.html" class="navigation__link link"
+                >Портфоліо</a
+              >
             </li>
-            <li class="header-item">
-              <a href="" class="header-link link">Контакти</a>
+            <li class="navigation__item">
+              <a href="" class="navigation__link link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-contacts list">
+        <ul class="connect list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-email link"
-              ><svg class="email-icon" width="16" height="12">
+            <a href="mailto:info@devstudio.com" class="connect__email link"
+              ><svg class="connect__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="header-tel link"
-              ><svg class="tel-icon" width="16" height="12">
+            <a href="tel:+380961111111" class="connect__tel link"
+              ><svg class="connect__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -62,9 +67,9 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <div class="hero-container">
-          <h1 class="hero-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-          <button type="button" class="hero-btn" data-modal-open>
+        <div class="hero__container container">
+          <h1 class="hero__title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+          <button type="button" class="hero__btn" data-modal-open>
             Замовити послугу
           </button>
         </div>
@@ -354,76 +359,78 @@
     </main>
     <!-- Підвал сторінки -->
     <footer class="footer">
-      <div class="container footer-address-all">
+      <div class="container footer__address-all">
         <!--Contacts-->
         <div class="address-footer">
           <a href="./index.html" lang="en" class="color-logo logo"
             >Web<span class="footer-logo logo">Studio</span></a
           >
-          <address class="address">
-            <ul class="footer-list list">
+          <address class="footer__address">
+            <ul class="footer__list list">
               <li class="footer-item">
                 <a
                   href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4269576,30.539478,3a,67.5y,244.06h,99.34t/data=!3m6!1e1!3m4!1s_tTTZXFVGUYes6xDsh9P0A!2e0!7i13312!8i6656!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                   target="_blank"
-                  class="footer-address"
+                  class="footer__address"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-item">
-                <a href="mailto:info@example.com" class="footer-email"
+              <li class="footer__item">
+                <a href="mailto:info@example.com" class="footer__email"
                   >info@example.com</a
                 >
               </li>
-              <li class="footer-item">
-                <a href="tel:+380991111111" class="footer-tel">+380991111111</a>
+              <li class="footer__item">
+                <a href="tel:+380991111111" class="footer__tel"
+                  >+380991111111</a
+                >
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-soc">
-          <strong class="footer-call">приєднуйтесь</strong>
-          <ul class="footer-soc-list list">
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
+        <div class="footer__soc">
+          <strong class="footer__call">приєднуйтесь</strong>
+          <ul class="footer__soc-list list">
+            <li class="footer__soc-item">
+              <a href="" class="footer__soc-link link">
+                <svg class="footer__soc-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="footer__soc-item">
+              <a href="" class="footer__soc-link link">
+                <svg class="footer__soc-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-Twotter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="footer__soc-item">
+              <a href="" class="footer__soc-link link">
+                <svg class="footer__soc-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-Facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="footer__soc-item">
+              <a href="" class="footer__soc-link link">
+                <svg class="footer__soc-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <form class="footer-join-tg">
-          <strong class="footer-join">Підпишіться на розсилку</strong>
+        <form class="footer__join-tg">
+          <strong class="footer__join">Підпишіться на розсилку</strong>
           <input
             type="email"
-            class="footer-join-email"
+            class="footer__join-email"
             name="email-tg"
             placeholder="E-mail"
             required
           />
-          <button type="button" class="footer-button">
+          <button type="button" class="footer__button">
             Підписатися
             <svg class="telega-svg" width="24" height="24">
               <use href="./images/icons.svg#icon-telega"></use>
