--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
   </head>
   <body class="body">
     <header class="header">
-      <div class="container navigation__container">
+      <div class="container header__container">
         <!-- menu -->
         <nav class="navigation">
-          <a href="./index.html" lang="en" class="color-logo logo link"
+          <a href="./index.html" lang="en" class="logo__blue logo link"
             >Web<span class="header__logo logo">Studio</span></a
           >
           <ul class="navigation__list list">
@@ -32,7 +32,7 @@
               <a href="index.html" class="navigation__link link">Студія</a>
             </li>
             <li class="navigation__item">
-              <a href="portfolio.html" class="navigation__link-portfolio link"
+              <a href="portfolio.html" class="navigation__link navigation__link__active link"
                 >Портфоліо</a
               >
             </li>
@@ -43,7 +43,7 @@
         </nav>
         <ul class="connect list">
           <li>
-            <a href="mailto:info@devstudio.com" class="connect__email link"
+            <a href="mailto:info@devstudio.com" class="connect__link link"
               ><svg class="connect__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
@@ -51,7 +51,7 @@
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="connect__tel link"
+            <a href="tel:+380961111111" class="connect__link link"
               ><svg class="connect__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -235,10 +235,10 @@
     </main>
     <!-- Підвал сторінки -->
     <footer class="footer">
-      <div class="container footer__address-all">
+      <div class="footer__container footer__address-all">
         <!--Contacts-->
         <div class="address-footer">
-          <a href="./index.html" lang="en" class="color-logo logo"
+          <a href="./index.html" lang="en" class="logo__blue logo"
             >Web<span class="footer-logo logo">Studio</span></a
           >
           <address class="footer__address">
