--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
       <div class="container header__container">
         <!-- menu -->
         <nav class="navigation">
-          <a href="./index.html" lang="en" class="logo__blue logo link"
-            >Web<span class="header__logo logo">Studio</span></a
+          <a href="./index.html" lang="en" class="blue link"
+            >Web<span class="logo">Studio</span></a
           >
           <ul class="navigation__list list">
             <li class="navigation__item">
@@ -238,8 +238,8 @@
       <div class="footer__container footer__address-all">
         <!--Contacts-->
         <div class="address-footer">
-          <a href="./index.html" lang="en" class="logo__blue logo"
-            >Web<span class="footer-logo logo">Studio</span></a
+          <a href="./index.html" lang="en" class="blue logo"
+            >Web<span class="footer-logo">Studio</span></a
           >
           <address class="footer__address">
             <ul class="footer__list list">
